# snarvei

./: Cargo.toml  README.md  notes.md
config/: Cargo.toml
config/src/: fp.rs  lib.rs  main.rs  model.rs
daemon/: Cargo.toml
daemon/src/: dispatch.rs  event.rs  lib.rs  main.rs  watcher.rs
daemon/src/input/: event.rs  listener.rs  mod.rs
daemon/src/libinput/: event.rs  input_code_gen.py  listener.rs
keycodes/: Cargo.toml
keycodes/src/: converters.rs  enums.rs  keycode_gen.py  lib.rs
manager/: Cargo.toml  build.rs
manager/resources/: keybind.ui  macro.ui  resources.gresource.xml  shortcut.ui  snarvei.cmb  style.css  window.ui
manager/src/: main.rs  window.rs
manager/src/macro_box/: imp.rs  mod.rs
manager/src/shortcut/: imp.rs  keybind.rs  mod.rs
manager/src/window/: imp.rs  mod.rs
src/: lib.rs  main.rs
src/libinput/: codes.rs  event.rs  input_code_gen.py  listener.rs  mod.rs
