[package]
name = "snarvei-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../config", package = "snarvei-config" }
keycodes = { path = "../keycodes", package = "snarvei-keycodes" }
evdev = { package = "evdev-rs", version = "0.6.1" }
input = "0.7"
libc = "0.2.137"
