[package]
name = "snarvei-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../config", package = "snarvei-config" }
keycodes = { path = "../keycodes", package = "snarvei-keycodes" }
libevdev = { package = "evdev-rs", version = "0.6.1" }
libinput = { version = "0.7", package = "input" }
libc = "0.2.137"
notify = "5.0.0"
log = "0.4.17"
env_logger = "0.9.3"
